# cryptolake-con-Copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  00000-a96ad1e3-ce28-4864-ae7a-494aa91da474.metadata.json  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  troubleshooting_log.md
.github/workflows/: cd.yml  ci.yml  data-quality.yml
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/prometheus/: prometheus.yml
docker/spark/: Dockerfile  spark-defaults.conf
docs/: architecture.md  data_dictionary.md  setup_guide.md  troubleshooting_log.md
docs/data_contracts/: bronze_prices.yml  silver_prices.yml
docs/diagrams/: architecture.mermaid
models/: ensemble_config.json  ensemble_config.json.bak  gb_direction.pkl  norm_historical.pth  norm_recent.pth  return_lstm.pth  rf_direction.pkl  tft_historical.pth  tft_recent.pth  tft_v1.pth
models/backup_v2/: gb_direction.pkl  return_lstm.pth  rf_direction.pkl
scripts/: seed_data.py  setup_local.bat  setup_local.sh  train_agents.py
src/: _test_iceberg.py  test_thrift_conn.py
src/config/: logging.py  settings.py
src/ingestion/batch/: base_extractor.py  coingecko_extractor.py  fear_greed_extractor.py
src/ingestion/streaming/: binance_producer.py  kafka_config.py
src/ml/: features.py  inference_service.py  inference_service.py.bak  models.py  train.py
src/orchestration/dags/: dag_full_pipeline.py  dag_maintenance.py  dag_ml_retrain.py  dag_ml_training.py
src/processing/batch/: api_to_bronze.py  bronze_to_silver.py  init_iceberg.py  silver_to_gold.py  verify_data.py
src/processing/schemas/: bronze.py  contracts.py  silver.py
src/processing/streaming/: silver_realtime_vwap.py  stream_to_bronze.py
src/quality/: dq_engine.py  run_quality_checks.py  validators.py
src/quality/checkpoints/: daily_validation.yml
src/quality/expectations/: bronze_prices_suite.json  gold_market_suite.json  silver_prices_suite.json
src/serving/api/: main.py  utils.py
src/serving/api/models/: schemas.py
src/serving/api/routes/: analytics.py  health.py  prices.py
src/serving/dashboard/: app.py
src/serving/dashboard/components/: fear_greed_gauge.py  market_overview.py  price_charts.py
src/transformation/dbt_cryptolake/: .user.yml  dbt_project.yml  profiles.yml
src/transformation/dbt_cryptolake/seeds/: coin_metadata.csv
src/transformation/dbt_cryptolake/tests/: assert_no_future_dates.sql  (+1 more)
terraform/: outputs.tf  variables.tf
terraform/environments/aws/: main.tf
terraform/environments/local/: main.tf
terraform/modules/storage/: main.tf
tests/: conftest.py  test_pyiceberg.py
tests/integration/: test_kafka_pipeline.py  test_spark_jobs.py
tests/unit/: test_extractors.py  test_schemas.py  test_transformations.py
(+10 files in other folders)
