[project]
name = "cryptolake"
version = "0.1.0"
description = "Real-time crypto analytics lakehouse"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.35.0",
    "great-expectations>=1.0.0",
    "pyiceberg>=0.7.0",
    "pyarrow>=15.0.0",
    "dbt-core>=1.8.0",
    "dbt-spark>=1.8.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
